Esempi/init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-init-demo
spec:
  containers:
    - name: app
      image: nginx
      volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html

  volumes:
    - name: shared-data
      emptyDir: {}
