Esempi/node-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-node-affinity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-node-affinity
  template:
    metadata:
      labels:
        app: nginx-node-affinity
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - eu-central-1a
                      - eu-central-1b
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
