Esempi/node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-node-selector
spec:
  nodeSelector:
    disktype: ssd
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
