Esempi/taints-tolerations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-app
spec:
  tolerations:
    - key: workload
      operator: Equal
      value: storage
      effect: NoSchedule
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
